<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:id="@+id/tracking_panel"
            android:background="@color/white"
            android:padding="@dimen/spacing_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/edit_message"
                android:hint="Tambahkan pesan"
                android:lines="2"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edit_catches"
                android:hint="Jumlah Tangkapan"
                android:singleLine="true"
                android:inputType="number"
                android:layout_below="@id/edit_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <RelativeLayout
                android:layout_below="@id/edit_catches"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_duration"
                    android:text="@string/format_duration"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_80"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/text_distance"
                    android:text="@string/format_distance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_80"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RelativeLayout>
        </RelativeLayout>

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_below="@id/tracking_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".TrackingActivity" />

        <Button
            android:id="@+id/btn_start"
            android:text="@string/btn_start"
            android:layout_alignParentBottom="true"
            android:background="@drawable/btn_rounded_accent"
            android:textColor="@color/white"
            android:layout_margin="@dimen/spacing_small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>